examples/test/testpolicy17713.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17713
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key15: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value44
          key30: value41
          key37: value19
      podSelector:
        matchLabels:
          key42: value3
          key17: value48
          key41: value28
